2005-08-25  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : add PLATFORM_WIN32 conditional. Borrow mono's 
	libtool s/cyg// hack. Improve/relocate System.Drawing check.
	* Makefile.include : add gapi-cdecl-insert handling for win32.
	* glib/Makefile.am : add gapi-cdecl-insert handling for win32.
	* gtkdotnet/Makefile.am : s/-r:System.Drawing/-r:System.Drawing.dll/.
	* sample/DrawingSample.cs : remove C# 2.0-isms.
	* sample/Makefile.am : s/-r:System.Drawing/-r:System.Drawing.dll/.

2005-08-25  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version to 2.5.90.99
	* bootstrap-2.4 : bump version to 2.3.90.99

2005-08-25  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoIconView.cs : remove C# 2.0-isms.
	* sample/opaquetest/OpaqueTest.cs : remove C# 2.0-isms.
	* sample/valuetest/ValueTest.cs : remove C# 2.0-isms.
	* sample/PolarFixed.cs : remove C# 2.0-isms.

2005-08-23  Ben Maurer  <bmaurer@novell.com>

	* glib/Object.cs: Escape names and ensure stuff is unique.

2005-08-23  Joe Shaw  <joeshaw@novell.com>

	* generator/SymbolTable.cs: Add "unsigned" as a type
	which maps to "uint".

	* parser/gapi2xml.pl: Handle "type const *" return types
	as well.  I think this is all of them!

2005-08-23  Joe Shaw  <joeshaw@novell.com>

	* parser/gapi2xml.pl: Fix a cut-and-paste error in handling
	"type const *" fields.

2005-08-23  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : handle foo const * fields.
	* gnome/gnome-api-2.10.raw : regen.

2005-08-23  Mike Kestner  <mkestner@novell.com>

	* bootstrap-for-the-insane : restore the message of doom that was
	removed during the "bootstrap-generic" reorganization.

2005-08-22  Joe Shaw  <joeshaw@novell.com>

	* parser/gapi2xml.pl: Fix a minor bug handling "type const *"
	parameters.

2005-08-22  Ben Maurer  <bmaurer@novell.com>

	* gtk/TreeNode.cs: Add Interlocked.Increment rather than ++. This
	makes it safe to create tree nodes in a worker thread as long as