@@ -88,6 +88,11 @@ AC_SUBST(BUILD_GTK_LIBS)
 MONO_REQUIRED_VERSION=1.0
 PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)
 
+AC_PATH_PROG(GACUTIL, gacutil, no)
+if test "x$GACUTIL" = "xno" ; then
+	AC_MSG_ERROR([No gacutil tool found. You need to install either the mono or .Net SDK.])
+fi
+
 if test "x$has_mono" = "xtrue"; then
 GACUTIL_FLAGS='/package $(PACKAGE_VERSION) /gacdir $(DESTDIR)$(prefix)/lib'
 GENERATED_SOURCES=generated/*.cs
@@ -124,11 +129,6 @@ fi
 CS="C#"
 if test "x$CSC" = "xno" ; then
 	AC_MSG_ERROR([No $CS compiler found])
-fi
-
-AC_PATH_PROG(GACUTIL, gacutil, no)
-if test "x$GACUTIL" = "xno" ; then
-	AC_MSG_ERROR([No gacutil tool found])
 fi
 
 AC_SUBST(RUNTIME)
