@@ -1,5 +1,12 @@
 2005-08-25  Mike Kestner  <mkestner@novell.com>
 
+	* configure.in.in : move GACUTIL check forward ahead of a use.
+	* Makefile.include : distcheck fixes
+	* glib/Makefile.am : distcheck fixes
+	* gtkdotnet/Makefile.am : distcheck fixes
+
+2005-08-25  Mike Kestner  <mkestner@novell.com>
+
 	* configure.in.in : add PLATFORM_WIN32 conditional. Borrow mono's 
 	libtool s/cyg// hack. Improve/relocate System.Drawing check.
 	* Makefile.include : add gapi-cdecl-insert handling for win32.
